--- a/src/recon_buildblock/CMakeLists.txt
+++ b/src/recon_buildblock/CMakeLists.txt
@@ -72,6 +72,7 @@ set(${dir_LIB_SOURCES}
         QuadraticPrior
         RelativeDifferencePrior
 		LogcoshPrior
+	QuadraticBowsherPrior
 	FilterRootPrior 
 	GeneralisedObjectiveFunction 
 	PoissonLogLikelihoodWithLinearModelForMean 
