make `dot` optional when running doxygen

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -239,8 +239,12 @@ if(BUILD_DOCUMENTATION)
         message(FATAL_ERROR "Doxygen is needed to build the documentation.")
     endif()
 
-    if(NOT DOXYGEN_DOT_FOUND)
-    	message(FATAL_ERROR "Dot is needed for the Doxygen documentation to be generated.")
+    if(DOXYGEN_DOT_FOUND)
+        set(HAVE_DOT 1)
+    	message(WARNING "Graphviz dot is not found. It is recommended to install Graphviz for nicer Doxygen documentation")
+    else()
+        set(HAVE_DOT 0)
+        message(STATUS "Graphviz dot found. It will be used for the Doxygen documentation.")
     endif()
 
     set(doxyfile_in ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in)
