added txx files to list of explicit dependencies
these are template definitions

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -210,7 +210,7 @@ install(DIRECTORY "${INCLUDE_DIR}" DESTINATION include)
 
 #### find header files for re-use in stir_exe_targets.cmake and doxygen target
 include(FindAllHeaderFiles)
-find_all_header_files(ALL_HEADERS ALL_INLINES "${INCLUDE_DIR}/stir")
+find_all_header_files(ALL_HEADERS ALL_INLINES ALL_TXXS "${INCLUDE_DIR}/stir")
 
 #### STIR library
 include(stir_dirs)
@@ -220,7 +220,7 @@ if(NOT DISABLE_STIR_LOCAL)
   find_path(STIR_LOCAL NAME "extra_stir_dirs.cmake" PATHS "${PROJECT_SOURCE_DIR}/src/local/" NO_DEFAULT_PATH)
   if (STIR_LOCAL)
     # append any headers there
-    find_all_header_files(ALL_HEADERS ALL_INLINES "${STIR_LOCAL}")
+    find_all_header_files(ALL_HEADERS ALL_INLINES ALL_TXXS "${STIR_LOCAL}")
     # include user file
     include(${STIR_LOCAL}/extra_stir_dirs.cmake)
   endif()
@@ -229,7 +229,7 @@ endif()
 # Include the experimental code
 if (STIR_ENABLE_EXPERIMENTAL)
   # append any headers there
-  find_all_header_files(ALL_HEADERS ALL_INLINES "${INCLUDE_DIR}/stir_experimental")
+  find_all_header_files(ALL_HEADERS ALL_INLINES ALL_TXXS "${INCLUDE_DIR}/stir_experimental")
   # add the sub-dir
   ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/experimental)
 endif()
