--- a/src/cmake/STIRConfig.cmake.in
+++ b/src/cmake/STIRConfig.cmake.in
@@ -62,6 +62,7 @@ if (@LLN_FOUND@)
   # need to add this as stir_ecat7.h etc rely on it
   # would be better to add it to STIR_INCLUDE_DIRS (TODO)
   include_directories("@LLN_INCLUDE_DIRS@")
+  set(STIR_BUILT_WITH_ECAT TRUE)
 endif()
 
 if (@CERN_ROOT_FOUND@)
@@ -71,6 +72,7 @@ if (@CERN_ROOT_FOUND@)
   # need to add this as registries rely on it
   # would be better to add it to STIR_INCLUDE_DIRS (TODO)
   include_directories(${CERN_ROOT_INCLUDE_DIRS})
+  set(STIR_BUILT_WITH_CERN_ROOT TRUE)
 endif()
 
 if (@AVW_FOUND@)
@@ -80,12 +82,15 @@ if (@AVW_FOUND@)
   # need to add this as registries rely on it
   # would be better to add it to STIR_INCLUDE_DIRS (TODO)
   include_directories(${AVW_INCLUDE_DIRS})
+  set(STIR_BUILT_WITH_AVW TRUE)
 endif()
 
 if (@STIR_MPI@)
   find_package(MPI REQUIRED)
+  set(STIR_BUILT_WITH_MPI TRUE)
 endif()
 
 if(@STIR_OPENMP@)
   find_package(OpenMP REQUIRED)  
+  set(STIR_BUILT_WITH_OpenMP TRUE)
 endif()
