--- a/src/cmake/STIRConfig.cmake.in
+++ b/src/cmake/STIRConfig.cmake.in
@@ -1,7 +1,8 @@
 # The original *cmake.in file is part of STIR.
 #
 # Author: Kris Thielemans
-# Copyright 2016 University College London
+# Author Richard Brown
+# Copyright 2016, 2019 University College London
 #
 #  Licensed under the Apache License, Version 2.0 (the "License");
 #  you may not use this file except in compliance with the License.
@@ -25,7 +26,9 @@
 # At this point in time, you do need to add
 #  include_directories("${STIR_INCLUDE_DIRS}")
 # to your CMake file to get the STIR_REGISTRIES to compile.
-
+#
+# The file also sets variables such as STIR_BUILT_WITH_ITK, STIR_BUILT_WITH_OpenMP etc
+# in case you need to how it was built.
 @PACKAGE_INIT@ 
 
 # add folder where this file resides to the cmake path such that it can use our find_package modules and .cmake files
@@ -62,7 +65,7 @@ if (@LLN_FOUND@)
   # need to add this as stir_ecat7.h etc rely on it
   # would be better to add it to STIR_INCLUDE_DIRS (TODO)
   include_directories("@LLN_INCLUDE_DIRS@")
-  set(STIR_BUILT_WITH_ECAT TRUE)
+  set(STIR_BUILT_WITH_LLN_MATRIX TRUE)
 endif()
 
 if (@CERN_ROOT_FOUND@)
