--- a/src/cmake/STIRConfig.cmake.in
+++ b/src/cmake/STIRConfig.cmake.in
@@ -48,6 +48,8 @@ set(STIR_REGISTRIES @STIR_REGISTRIES@)
 
 if (@ITK_FOUND@)
   message(STATUS "ITK support in STIR enabled.")
+  set(ITK_DIR "@ITK_DIR@")
+  find_package(ITK REQUIRED)
   set(STIR_BUILT_WITH_ITK TRUE)
 endif()
 
