--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -210,7 +210,7 @@ if(HAVE_STD_SHARED_PTR)
     option(STIR_USE_BOOST_SHARED_PTR "Use of boost::shared_ptr as opposed to std::shared_ptr" OFF)
     mark_as_advanced(STIR_USE_BOOST_SHARED_PTR)
 else()
-    set(STIR_USE_BOOST_SHARED_PTR OFF)
+    set(STIR_USE_BOOST_SHARED_PTR ON)
 endif()
 
 
