--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,7 @@ option(DISABLE_RDF "disable use of GE RDF library" OFF)
 option(DISABLE_STIR_LOCAL "disable use of LOCAL extensions to STIR" OFF)
 option(DISABLE_CERN_ROOT "disable use of Cern ROOT libraries" OFF)
 option(STIR_ENABLE_EXPERIMENTAL "disable use of STIR experimental code" OFF) # disable by default
+option(STIR_ENABLE_SPECT_EXPERIMENTAL "disable use of STIR experimental SPECT code" OFF) # disable by default
 
 if(NOT DISABLE_ITK)
    # See if we can find a compiled version of ITK (http://www.itk.org/)
@@ -118,6 +119,16 @@ endif()
 if(NOT DISABLE_RDF)
   find_package(RDF)
 endif()
+
+if(STIR_ENABLE_SPECT_EXPERIMENTAL)
+  find_package(nlohmann_json 3.2.0 REQUIRED)
+
+  if (nlohmann_json_FOUND)
+    message(STATUS "nlohmann JSON library found.")
+    set(HAVE_NLOHMANN_JSON ON)
+  endif()
+endif()
+
 
 #### enable support for ctest
 ENABLE_TESTING()
