--- a/src/listmode_buildblock/CMakeLists.txt
+++ b/src/listmode_buildblock/CMakeLists.txt
@@ -5,8 +5,12 @@ set(dir listmode_buildblock)
 set (dir_LIB_SOURCES ${dir}_LIB_SOURCES)
 
 set(${dir_LIB_SOURCES}
-	CListEvent 
+        ListModeData
+        ListEvent
+        CListEvent
 	CListModeData 
+        SPECTListModeData
+        SPECTListEvent
 	LmToProjData 
         LmToProjDataBootstrap
         CListModeDataECAT8_32bit
