Test class for Scatter simulation
Currently tests downsampling of the scanner and the image for scatter points. 
This commit might break the Scatter Estimation, as I made some changes in the input args of some functions. I made the changes having in mind the test flow and usability at SIRF. I will fix everything when re-working on the Scatter Estimation.

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -42,6 +42,7 @@ Set(${dir_INVOLVED_TEST_EXE_SOURCES}
         # the next 2 are interactive, so we don't add a test for it, but only compile them
 	test_display
 	test_interpolate
+	test_ScatterSimulation
 )
 
 set(buildblock_simple_tests
