--- a/.travis.yml
+++ b/.travis.yml
@@ -26,10 +26,11 @@ matrix:
  - os: linux
    python: 3
    env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=1 -DSTIR_OPENMP:BOOL=OFF" CC=clang-5.0 CXX=clang++-5.0
- - os: linux
-   python: 3
-   # OPENMP on Travis seemed to be version 1 (???), so don't build it
-   env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=1 -DSTIR_OPENMP:BOOL=OFF" CC=clang-6.0 CXX=clang++-6.0
+ #- os: linux
+ #  python: 3
+ #  # OPENMP on Travis seemed to be version 1 (???), so don't build it
+ #  # This gives loads of warnings about auto_ptr, exceeding the log size limit
+ #  env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=1 -DSTIR_OPENMP:BOOL=OFF"  -DCMAKE_CXX_STANDARD=11 CC=clang-6.0 CXX=clang++-6.0
 
    ####  osx
    # note: cannot use OpenMP on OSX yet, see https://github.com/UCL/STIR/issues/117
@@ -61,7 +62,7 @@ addons:
   apt:
     sources:
       - llvm-toolchain-trusty-5.0
-      - llvm-toolchain-trusty-6.0
+      # - llvm-toolchain-trusty-6.0
       - ubuntu-toolchain-r-test
     packages:
       - g++-5
@@ -75,7 +76,7 @@ addons:
       - python3-pytest
       - libgomp1
       - clang-5.0
-      - clang-6.0
+      # - clang-6.0
       - root-system-bin
       - libroot-tree-dev
       - libroot-tree-treeplayer-dev
