--- a/src/recon_buildblock/CMakeLists.txt
+++ b/src/recon_buildblock/CMakeLists.txt
@@ -63,6 +63,7 @@ set(${dir_LIB_SOURCES}
 	BinNormalisationFromProjData 
 	TrivialBinNormalisation 
 	BinNormalisationFromAttenuationImage 
+	BinNormalisationSPECT
 	GeneralisedPrior 
 	ProjDataRebinning 
 	FourierRebinning
