add utility (invert_axis) for axis inversion

--- a/src/utilities/CMakeLists.txt
+++ b/src/utilities/CMakeLists.txt
@@ -42,6 +42,7 @@ set(${dir_EXE_SOURCES}
 	find_maxima_in_image 
 	create_projdata_template 
 	SSRB 
+        invert_axis
 	poisson_noise 
 	get_time_frame_info 
 	generate_image 
