--- a/src/recon_test/CMakeLists.txt
+++ b/src/recon_test/CMakeLists.txt
@@ -44,4 +44,7 @@ if (BUILD_TESTING)
   install(TARGETS fwdtest bcktest DESTINATION bin)
 endif()
 
+# test_data_processor_projectors requires input argument
+ADD_TEST(test_data_processor_projectors test_data_processor_projectors ${CMAKE_SOURCE_DIR}/recon_test_pack/Utahscat600k_ca_seg4.hs)
+
 # TODO test_modelling.sh
