add invert axis class and apply to SPECTUB image indexes

--- a/src/spatial_transformation_buildblock/CMakeLists.txt
+++ b/src/spatial_transformation_buildblock/CMakeLists.txt
@@ -26,6 +26,7 @@ set(${dir_LIB_SOURCES}
    SpatialTransformation
    GatedSpatialTransformation
    warp_image
+   InvertAxis
 ) 
 
 include(stir_lib_target)
