--- a/src/cmake/STIRConfig.cmake.in
+++ b/src/cmake/STIRConfig.cmake.in
@@ -92,7 +92,7 @@ if(@STIR_OPENMP@)
   set(STIR_BUILT_WITH_OpenMP TRUE)
 endif()
 
-if(NOT @DISBALE_GPU@ AND @CUDA_FOUND@)
+if(@HAVE_GPU@)
   find_package(CUDA REQUIRED)
   set(STIR_BUILT_WITH_CUDA TRUE)
 endif()
