HAVE_GPU -> STIR_WITH_NIFTYPET_PROJECTOR

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,13 +133,13 @@ if (NIFTYPET_PETPRJ_LIB AND
   if (NOT DISBALE_GPU)
     find_package(CUDA QUIET)
     if (CUDA_FOUND)  
-      set(HAVE_GPU ON)
+      set(STIR_WITH_NIFTYPET_PROJETOR ON)
       set(STIR_gpu gpu)
       set(STIR_gpu_test "test/gpu")
     endif()
   endif()
 endif()
-if (HAVE_GPU) 
+if (STIR_WITH_NIFTYPET_PROJETOR) 
   message(STATUS "GPU support enabled.")
 else()
   message(STATUS "GPU support disabled.")
