--- a/src/cmake/STIRConfig.h.in
+++ b/src/cmake/STIRConfig.h.in
@@ -67,7 +67,7 @@ namespace stir {
 
 #cmakedefine HAVE_ITK
 
-#cmakedefine HAVE_GPU
+#cmakedefine STIR_WITH_NIFTYPET_PROJETOR
 
 #cmakedefine STIR_OPENMP
 
