--- a/src/cmake/STIRConfig.cmake.in
+++ b/src/cmake/STIRConfig.cmake.in
@@ -53,6 +53,12 @@ if (@ITK_FOUND@)
   set(STIR_BUILT_WITH_ITK TRUE)
 endif()
 
+if (@HDF5_FOUND@)
+  message(STATUS "HDF5 support in STIR enabled.")
+  find_package(HDF5 ${HDF5_VERSION} COMPONENTS CXX REQUIRED)
+  set(STIR_BUILT_WITH_HDF5 TRUE)
+endif()
+
 if (@LLN_FOUND@)
   set(HAVE_ECAT ON)
   message(STATUS "ECAT support in STIR enabled.")
