--- a/src/cmake/STIRConfig.cmake.in
+++ b/src/cmake/STIRConfig.cmake.in
@@ -55,7 +55,9 @@ endif()
 
 if (@HDF5_FOUND@)
   message(STATUS "HDF5 support in STIR enabled.")
-  find_package(HDF5 ${HDF5_VERSION} COMPONENTS CXX REQUIRED)
+  find_package(HDF5 @HDF5_VERSION@ COMPONENTS CXX REQUIRED)
+  include_directories(${HDF5_INCLUDE_DIRS})
+
   set(STIR_BUILT_WITH_HDF5 TRUE)
 endif()
 
